# mailerboi

./: .gitignore  Cargo.toml  FEEDBACK_1774566575.md  LICENSE  README.md  devenv.nix  tarpaulin.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-10-list-accounts.txt  task-11-folders.txt  task-12-list.txt  task-13-read.txt  task-14-20-commands.txt  task-2-toon-spike.txt  task-21-integration.txt  task-22-example-config.txt  task-23-quality-gate.txt  task-3-imap-spike.txt  task-4-domain-types.txt  task-5-error-types.txt  task-6-config-parse.txt  task-7-imap-connect.txt  task-8-output-formats.txt  task-9-cli-help.txt
.sisyphus/evidence/final-qa/: 00-build.txt  01-list-accounts-table.txt  02-list-accounts-json.txt  04-doctor.txt  05-check.txt  07-list.txt  08-search-unseen.txt  09-draft.txt  10-list-drafts.txt  11-check-drafts.txt  12-missing-config.txt  13-read-nonexistent.txt
.sisyphus/evidence/final-qa/clean-run/: 03-list-accounts-toon.txt  05-check.txt  06-folders.txt
.sisyphus/notepads/mailerboi/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: mailerboi.md
crates/mailerboi/: Cargo.toml
crates/mailerboi-core/: Cargo.toml
crates/mailerboi-core/src/: error.rs  lib.rs  output.rs  spike_imap.rs  spike_toon.rs
crates/mailerboi-core/src/config/: mod.rs
crates/mailerboi-core/src/domain/: envelope.rs  flag.rs  folder.rs  message.rs  mod.rs
crates/mailerboi-core/src/imap/: mod.rs
crates/mailerboi/src/: cli.rs  main.rs
crates/mailerboi/src/cmd/: accounts.rs  check.rs  delete.rs  doctor.rs  download.rs  draft.rs  flag.rs  folders.rs  list.rs  mod.rs  move_cmd.rs  read.rs  search.rs
crates/mailerboi/tests/: integration.rs
crates/mailerboi/tests/fixtures/: test-config.toml  test-config.toon  test-credentials.toml
examples/: config.toml  config.toon  credentials.toml
skill/: REFERENCE.md  SKILL.md
