[package]
name = "mailerboi"
version.workspace = true
edition.workspace = true

[dependencies]
mailerboi-core = { path = "../mailerboi-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
