[package]
name = "mailerboi"
version.workspace = true
edition.workspace = true

[dependencies]
mailerboi-core = { path = "../mailerboi-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
toon-format = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
